# 8-bit-emulator

./: CMakeLists.txt  Makefile  README.md
include/: chip8.h
src/: main.cpp
